task-8 - add all methods
