# swagger/node_mp_api/api/swagger/swagger.yaml
@@ -10,22 +10,25 @@ info:
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-# host: "virtserver.swaggerhub.com"
 host: "localhost:10010"
 basePath: "/JS_S/nj_mp/1.0.0"
-tags:
-- name: "city"
-  description: "Everything about cities"
-  externalDocs:
-    description: "Find out more"
-    url: "http://swagger.io"
-- name: "product"
-  description: "Everything about products"
-- name: "user"
-  description: "Everything about users"
-  externalDocs:
-    description: "Find out more about our store"
-    url: "http://swagger.io"
+# tags:
+# - name: "city"
+#   description: "Everything about cities"
+#   externalDocs:
+#     description: "Find out more"
+#     url: "http://swagger.io"
+# - name: "product"
+#   description: "Everything about products"
+# - name: "user"
+#   description: "Everything about users"
+#   externalDocs:
+#     description: "Find out more about our store"
+#     url: "http://swagger.io"
+consumes:
+  - application/json
+produces:
+  - application/json  
 schemes:
 - "https"
 - "http"
@@ -53,47 +56,38 @@ paths:
   /products:
     x-swagger-router-controller: product_controller
     get:
-      tags:
-      - "products"
-      summary: "Find all Products"
-      description: "Multiple status values can be provided with comma separated strings"
+      # tags:
+      # - "products"
+      description: "Return all Products"
       operationId: "findAllProducts"
-      parameters: []
-
-      # produces:
-      # - "application/json"
-      # - "application/xml"
-      # parameters:
-      # - name: "status"
-      #   in: "query"
-      #   description: "Status values that need to be considered for filter"
-      #   required: false
-      #   type: string
-      #   items:
-      #     type: "string"
-      #     enum:
-      #     - "available"
-      #     - "pending"
-      #     - "sold"
-      #     default: "available"
-      #   collectionFormat: "multi"
-
+      consumes:
+      - "application/json"
+      - "application/xml"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - name: "status"
+        in: "query"
+        description: "Status values that need to be considered for filter"
+        required: false
+        type: string
       responses:
         "200":
           description: Success
           schema:
-            # type: "array"
-            # items:
+            type: "array"
+            items:
               $ref: "#/definitions/Product"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
     post:
-      tags:
-      - "products"
+      # tags:
+      # - "products"
       summary: "Add a new product to the store(list of products)"
-      operationId: "addProduct"
+      operationId: "postProduct"
       consumes:
       - "application/json"
       - "application/xml"
@@ -102,14 +96,20 @@ paths:
       - "application/xml"
       parameters:
       - in: "body"
-        name: "body"
+        name: "product"
         description: "Product that needs to be added to the store"
-        required: true
+        required: false
         schema:
           $ref: "#/definitions/Product"
       responses:
-        405:
-          description: "Invalid input"
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Product"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Product not found"
     put:
       tags:
       - "product"
@@ -136,9 +136,10 @@ paths:
         405:
           description: "Validation exception"
   /products/{productId}:
+    x-swagger-router-controller: product_controller
     get:
-      tags:
-      - "product"
+      # tags:
+      # - "product"
       summary: "Find product by ID"
       description: "Returns a single product"
       operationId: "getProductById"
@@ -161,13 +162,13 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Product not found"
-      security:
-      - api_key: []
+      # security:
+      # - api_key: []
     delete:
-      tags:
-      - "product"
+      # tags:
+      # - "product"
       summary: "Deletes a product by ID"
-      operationId: "deleteProduct"
+      operationId: "removeProduct"
       produces:
       - "application/json"
       - "application/xml"
@@ -212,10 +213,10 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"  
     post:
-      tags:
-      - "cities"
+      # tags:
+      # - "cities"
       summary: "Add a new city"
-      operationId: "addCity"
+      operationId: "postCity"
       consumes:
       - "application/json"
       - "application/xml"
@@ -224,18 +225,25 @@ paths:
       - "application/xml"
       parameters:
       - in: "body"
-        name: "body"
+        name: "city"
         description: "City that needs to be added to the store"
-        required: true
+        required: false
         schema:
           $ref: "#/definitions/City"
       responses:
-        405:
-          description: "Invalid input"
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/City"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "City not found"
   /cities/{cityId}:
+    x-swagger-router-controller: city_controller
     get:
-      tags:
-      - "store"
+      # tags:
+      # - "store"
       summary: "Find city by ID"
       description: "Returns a single city"
       operationId: "getCityById"
@@ -247,10 +255,10 @@ paths:
         in: "path"
         description: "ID of city to return"
         required: true
-        type: "integer"
-        maximum: 10.0
-        minimum: 1
-        format: "int64"
+        type: "string"
+        # maximum: 10.0
+        # minimum: 1
+        # format: "int64"
       responses:
         200:
           description: "successful operation"
@@ -261,12 +269,11 @@ paths:
         404:
           description: "Order not found"
     delete:
-      tags:
-      - "store"
+      # tags:
+      # - "store"
       summary: "Delete a city by ID"
-      description: "For valid response try integer IDs with positive integer value.\\\
-        \ \\ Negative or non-integer values will generate API errors"
-      operationId: "deleteCity"
+      description: "Delete a city by ID"
+      operationId: "removeCity"
       produces:
       - "application/json"
       - "application/xml"
@@ -275,9 +282,9 @@ paths:
         in: "path"
         description: "ID of the city that needs to be deleted"
         required: true
-        type: "integer"
-        minimum: 1
-        format: "int64"
+        type: "string"
+        # minimum: 1
+        # format: "int64"
       responses:
         400:
           description: "Invalid ID supplied"
@@ -320,28 +327,35 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     post:
-      tags:
-      - "user"
+      # tags:
+      # - "user"
       summary: "Create user"
       description: "This can only be done by the logged in user."
-      operationId: "createUser"
+      operationId: "postUser"
       produces:
       - "application/json"
       - "application/xml"
       parameters:
       - in: "body"
-        name: "body"
+        name: "user"
         description: "Created user object"
         required: true
         schema:
           $ref: "#/definitions/User"
       responses:
-        default:
-          description: "successful operation"
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/User"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "User not found"
   /users/{userId}:
+    x-swagger-router-controller: user_controller
     get:
-      tags:
-      - "user"
+      # tags:
+      # - "user"
       summary: "Get user by ID"
       operationId: "getUserById"
       produces:
@@ -352,7 +366,8 @@ paths:
         in: "path"
         description: "The name that needs to be fetched. Use user1 for testing."
         required: true
-        type: "string"
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "successful operation"
@@ -363,12 +378,11 @@ paths:
         404:
           description: "User not found"
     delete:
-      tags:
-      - "user"
+      # tags:
+      # - "user"
       summary: "Delete user by ID"
-      description: "For valid response try integer IDs with positive integer value.\\\
-        \ \\ Negative or non-integer values will generate API errors"
-      operationId: "deleteUser"
+      description: "Delete user bu ID"
+      operationId: "removeUser"
       produces:
       - "application/json"
       - "application/xml"
@@ -377,7 +391,8 @@ paths:
         in: "path"
         description: "ID of the user that needs to be deleted"
         required: true
-        type: "string"
+        type: "integer"
+        format: "int64"
       responses:
         400:
           description: "Invalid username supplied"
@@ -394,21 +409,27 @@ definitions:
       - message
     properties:
       message:
-        type: string
+        type: string     
   ErrorResponse:
-    required:
-      - message
     properties:
       message:
         type: string
+    required:
+      - message
+    # required:
+    #   - message
+    # properties:
+    #   message:
+    #     type: string
   Product:
-    type: "object"
+    # type: "object"
     properties:
       # _id:
       #   type: "string"
       id:
         type: "integer"
-        format: "int64"
+      #  format: "int64"
+      #  type: "string"
       name:
         type: "string"
       brand:
@@ -416,22 +437,22 @@ definitions:
       company:
         type: "string"
       price:
-        type: "integer"
-        format: "int64"
+        type: "string"
+      #  format: "int64"
       isbn:
-        type: "boolean"
-        default: false
-    example:
-      id: 3
-      name: "Lizergin Acid"
-      brand: "Bayer LA-INC"
-      company: "Bayer INC"
-      price: 23.42999999999999971578290569595992565155029296875
-      isbn: "234968-54"
-    xml:
-      name: "Product"
+        type: "string"
+        # default: false
+    # example:
+    #   id: 3
+    #   name: "Lizergin Acid"
+    #   brand: "Bayer LA-INC"
+    #   company: "Bayer INC"
+    #   price: 23.42999999999999971578290569595992565155029296875
+    #   isbn: "234968-54"
+    # xml:
+    #   name: "Product"
   City:
-    type: "object"
+  #  type: "object"
     properties:
       name:
         type: "string"
@@ -451,7 +472,7 @@ definitions:
     xml:
       name: "City"
   User:
-    type: "object"
+  #  type: "object"
     properties:
       id:
         type: "integer"
